# RAG-Journal

./: .gitignore  README.md  app.py  build_vector_store.py  pyproject.toml  requirements.txt
data/: diary_entries.csv
data/entries/: diary_index.faiss  metadata.csv
src/: config.py
src/models/: embedding_model.py  load_model.py  sentiment_model.py  topic_model.py
src/rag/: vector_store.py
src/utils/: preprocessing.py
